--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -7,12 +7,13 @@
 </head>
 <body>
   <h1>Our Mission</h1>
-  <p>lorem lorem sit met biteer</p>
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore voluptatibus ducimus laudantium, sequi esse minus, dolorum consequatur corporis veritatis facilis necessitatibus illo itaque blanditiis a fugit, sit quos? Saepe, et?</p>
 <h2>Our Purpose</h2>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore vel tenetur odio ullam, nisi recusandae velit fugiat ipsa nesciunt, nobis similique officiis dolor modi neque sequi minus enim voluptatum consequuntur.</p>
 <h3>Our Statement</h3>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere dignissimos excepturi eligendi corrupti dolorem saepe beatae maxime quas, aperiam, dolor ad fugiat impedit autem at alias magni nostrum aspernatur perspiciatis?</p>
+  <h4>Our Core Values</h4>
+<p>lorem lorem sit met biteer</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere dignissimos excepturi eligendi corrupti dolorem saepe beatae maxime quas, aperiam, dolor ad fugiat impedit autem at alias magni nostrum aspernatur perspiciatis?</p>
 <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png "></a>
 </body>
 </html>
