--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,6 +6,7 @@
   <title>Basic HTML</title>
 </head>
 <body>
+  <a href="/tweets.html">tweets</a>
   <h1>Our Mission</h1>
   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore voluptatibus ducimus laudantium, sequi esse minus, dolorum consequatur corporis veritatis facilis necessitatibus illo itaque blanditiis a fugit, sit quos? Saepe, et?</p>
 <h2>Our Purpose</h2>
