--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,10 +6,13 @@
   <title>Basic HTML</title>
 </head>
 <body>
-  <ul>
+  <header>
+    <nav>
+     <ul>
     <li><a href="/index.html">Home</a></li>
     <li><a href="/tweets.html">Tweets</a></li>
-  </ul>
+  </ul> 
+    </nav>
 </header>
 <main>
   <article>
