--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -26,6 +26,33 @@
     <p>lorem lorem sit met biteer</p> 
     <a href="/tweets.html">tweets</a>  
     <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png "></a>   
+    <table>
+      <tr>
+        <th>Name</th>
+        <th>Age</th>
+        <th>Country</th>
+      </tr>
+      <tr>
+        <td>John</td>
+        <td>25</td>
+        <td>USA</td>
+      </tr>
+      <tr>
+        <td>Emily</td>
+        <td>28</td>
+        <td>Canada</td>
+      </tr>
+      <tr>
+        <td>Michael</td>
+        <td>32</td>
+        <td>Australia</td>
+      </tr>
+      <tr>
+        <td>Sophia</td>
+        <td>21</td>
+        <td>UK</td>
+      </tr>
+    </table>
   </article>
   <aside>
     <p>placeholder to add comment thread later</p>
