--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,8 +7,9 @@
 </head>
 <body>
   <header>
-    <h1>Washington Opili</h1>
+    <h1>Washington Opili - Personal Portofolio</h1>
     <p> A Software Engineer</p>
+</header> 
     <nav>
       <ul>
         <li><a href="/introduction">Introduction</a></li>
@@ -17,7 +18,6 @@
         <li><a href="/contact">Contact</a></li>
       </ul>
     </nav>
-  </header>
   <section id="introduction">
     <h2>Introduction</h2>
     <p>I am a Software Engineer at Silicon Techdata Group</p>
