--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Washington Opili - Personal Portofolio</title>
 </head>
@@ -9,15 +9,15 @@
   <header>
     <h1>Washington Opili - Personal Portofolio</h1>
     <p> A Software Engineer</p>
-</header> 
     <nav>
-      <ul>
-        <li><a href="/introduction">Introduction</a></li>
-        <li><a href="/projects">Projects</a></li>
-        <li><a href="/about_me">About Me</a></li>
-        <li><a href="/contact">Contact</a></li>
-      </ul>
-    </nav>
+        <ul>
+          <li><a href="/introduction">Introduction</a></li>
+          <li><a href="/projects">Projects</a></li>
+          <li><a href="/about_me">About Me</a></li>
+          <li><a href="/contact">Contact</a></li>
+        </ul>
+      </nav>
+</header> 
   <section id="introduction">
     <h2>Introduction</h2>
     <p>I am a Software Engineer at Silicon Techdata Group</p>
