commited the changes on index file

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,13 +8,13 @@
 <body>
   <header>
     <h1>Washington Opili - Personal Portofolio</h1>
-    <p> A Software Engineer</p>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, distinctio. Vitae dolor odio maxime corporis rerum quam veniam quod reprehenderit quibusdam incidunt quasi, ipsa deleniti! Sapiente iste voluptate laborum ex.</p>
     <nav>
         <ul>
-          <li><a href="/introduction">Introduction</a></li>
-          <li><a href="/projects">Projects</a></li>
-          <li><a href="/about_me">About Me</a></li>
-          <li><a href="/contact">Contact</a></li>
+          <li><a href="#introduction">Introduction</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#about_me">About Me</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
 </header> 
