commited index files

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,49 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Washington Opili - Personal Portofolio</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Washington Opili - Personal Portfolio</title>
 </head>
 <body>
-  <header>
-    <h1>Washington Opili - Personal Portofolio</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, distinctio. Vitae dolor odio maxime corporis rerum quam veniam quod reprehenderit quibusdam incidunt quasi, ipsa deleniti! Sapiente iste voluptate laborum ex.</p>
-    <nav>
-        <ul>
-          <li><a href="#introduction">Introduction</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#about_me">About Me</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-</header> 
-  <section id="introduction">
-    <h2>Introduction</h2>
-    <p>I am a Software Engineer at Silicon Techdata Group</p>
-  </section>
-  <section id="projects">
-<article class="projects">
-<h3>Malaika High School</h3>
-<p>Malaika is the best school in Lower Kabete</p>
-<a href="/malaika_high_school" target="_blank">Malaika High School</a>
-</article>
-<article class="projects">
-  <h3>Kichinjio Butchery</h3>
-  <p> Kichinjio is the best butchery in Ruaka</p>
-  <a href="/kichinjio_butchery" target="_blank">Kichinjo Butchery</a>
-</article>
-  </section>
-  <section id="about">
-<h2>About Me</h2>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab sed, placeat rem suscipit exercitationem quia minima ea eveniet veritatis hic numquam asperiores eum saepe temporibus quod alias officia blanditiis accusamus?</p>
-  </section>
-<section id="contact">
-  <h2>Contact</h2>
-  <a href="https://github.com/dashboard" target="_blank">Email</a>
-</section>
-<footer>
-  <p>&copy; 2024 Washington Opili</p>
-</footer>
+    <header>
+        <h1>Washington Opili</h1>
+        <p>A Software Engineer and  Actuarial Analyst</p>
+        <nav>
+            <ul>
+                <li><a href="#introduction">Introduction</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#about_me">About Me</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header> 
+    <main>
+    <section id="introduction">
+        <h2>Introduction</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates deserunt architecto asperiores officiis, aut enim maxime maiores quaerat, repudiandae eos magnam sapiente ut hic quas, laboriosam rem. Ab, repudiandae perferendis.</p>
+    </section>    
+    <section id="projects">
+        <h2>Projects</h2>
+        <article class="projects">
+            <h3>
+                <a href="#projects" target="_blank">Fr. Okodoi Sec School</a>
+            </h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic quasi, omnis ex praesentium a animi ratione sunt dolor nam laborum excepturi quo exercitationem repellat sit. Deserunt aspernatur veniam molestias consectetur?</p>
+        </article>
+            <article class="projects">
+                <h3>
+                  <a href="#projects" target="_blank">St. Pauls Amukura</a>  
+                </h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sint, recusandae libero laborum sapiente ex reprehenderit! Magni, suscipit! Voluptatibus ipsa quas suscipit exercitationem in! Quam porro a natus dolore voluptatibus dicta?</p>  
+        </article>
+    </section>
+    <section id="about">
+        <h2>About Me</h2>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, tempore facere labore fugiat vitae placeat neque numquam earum quam odit repudiandae molestiae aspernatur consectetur molestias animi doloribus aliquid dolor at?</p>
+    </section>
+    <section id="contact">
+<h2>Contact</h2>
+<a href="https://github.com/dashboard" target="_blank"></a>
+    </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Washington Opili</p>
+    </footer>   
 </body>
 </html>
